correcting some layout problems for Safari

--- a/app/styles/themes/default-bright.css
+++ b/app/styles/themes/default-bright.css
@@ -9,8 +9,16 @@ div.navbar-header a { color: #333;}
 .error { border-color: red;}
 a { padding-left: 2px; padding-right: 2px;}
 
-#columns { margin: 55px 0px 0px 0px;}
-#columns > div { padding-left: 5px; padding-right:5px;}
+#column-container {
+    margin: 55px 0px 0px 0px;
+    position: relative;
+    float: left;
+}
+#columns > div {
+    padding-left: 5px; padding-right:5px;
+    float: left;
+    position: relative;
+}
 #columns a { color: #444; }
 
 
